# Loudspeaker-Modeling

./: .gitattributes  .gitignore  AGENTS.md  README.md  dvc.yaml  params.yaml  pyproject.toml
data/raw/: manifest.csv
docs/: decisions.md  experiment_log.md  measurement_protocol.md
docs/expose/: Expose_lautsprecher.docx  expose_summary.md
notebooks/: data_synthesis.ipynb  data_verification.ipynb  therealmvp.ipynb
scripts/: _bootstrap.py  evaluate_model.py  preprocess_dataset.py  train_model.py
src/loudspeaker_modeling/: __init__.py  features.py  metrics.py  model.py  preprocessing.py  verify.py
src/loudspeaker_modeling/data/: __init__.py  manifest.py
src/loudspeaker_modeling/dsp/: preprocessing.py
src/loudspeaker_modeling/evaluation/: metrics.py
src/loudspeaker_modeling/utils/: config.py
tests/: test_preprocessing.py
tests/integration/: test_scaffold_scripts.py
tests/unit/: test_config.py  test_manifest.py  test_metrics.py  test_preprocessing.py
